js/src/tests/test262/language/module-code/ambiguous-export-bindings/error-export-from-named-as.js







































$DONOTEVALUATE();

export { x as y } from './error-export-from-named_FIXTURE.js';
